--- a/style.css
+++ b/style.css
@@ -307,13 +307,50 @@ header .navigation li a:hover {
 }
 /* perfect */
 .perfect-blend {
-    min-height: 120vh;
+    min-height: 70vh;
     background-color: #232c33;
    justify-content: center;
    align-items: center;
    bottom: 50px;
 }
-
+.body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.box {
+    position: relative;
+    width: 100px;
+    height: 100px;
+    transform-style: preserve-3d;
+    animation: animate 20s linear infinite;
+}
+@keyframes animate {
+    0% {
+        transform: perspective(900px) rotateY(0deg);
+    }
+    100% {
+        transform: perspective(900px) rotateY(360deg);
+    }
+}
+.box span {
+    position: absolute;
+    top: 80px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform-origin: center;
+    transform-style: preserve-3d;
+    transform: rotateY(calc(var(--i) *65deg)) translateZ(200px);
+}
+.box span img {
+    position: absolute;
+    top: 0;
+    left: o;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 
 /* footer */
 footer {
@@ -513,6 +550,9 @@ footer {
     }
     .rest-info > div {
         flex: 1;
+    }
+    .perfect-blend {
+        min-height: 120vh;
     }
     .padding-right {
         padding-right: 4rem;
