--- a/style.css
+++ b/style.css
@@ -212,7 +212,10 @@ p {
     margin: 10px;
 }
 .rest-desc ul .animate-left {
-    padding-left: 20px;
+    padding-left: 10px;
+}
+.rest-desc ul .animate-right {
+    padding-left: 85px;
 }
 .rest-desc .center {
     display: flex;
