--- a/header.css
+++ b/header.css
@@ -5,6 +5,7 @@
 
 }
 header {
+    background: rgba(0, 0, 0, 0.5);
     position: fixed;
     top: 0;
     left: 0;
@@ -20,6 +21,14 @@ header.sticky {
     background: #4187f6;
     padding: 10px 30px;
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.5);
+}
+header.sticky .logo,
+header.sticky .navigation  li a {
+    color: #fff;
+}
+header.sticky .navigation  li a {
+    color: #fff;
+    font-size: 1.5em;
 }
 header .logo {
     color: #fff;
@@ -69,9 +78,11 @@ header .navigation  li a:hover {
     }
     header .navigation li {
         margin-left: 0;
+        margin-bottom: 30px;
     }
     header .navigation li a {
         font-size: 2em;
+        color: #fff;
     }
 
 
@@ -100,4 +111,6 @@ header .navigation  li a:hover {
         padding: 15px 10px;
         z-index: 1000000;
     }
+
 }
+
