--- a/header.css
+++ b/header.css
@@ -16,6 +16,7 @@ header {
     justify-content: space-between;
     align-items: center;
     transition: 0.5s;
+    z-index: 10;
 }
 header.sticky {
     z-index: 100000;
@@ -67,9 +68,9 @@ header .navigation  li a:hover {
     }
     header .navigation.active {
         width: 100%;
-        height: calc(100% - 70px);
+        height: calc(100% - 60px);
         position: fixed;
-        top: 70px;
+        top: 60px;
         left: 0;
         display: flex;
         justify-content: center;
