--- a/style.css
+++ b/style.css
@@ -60,6 +60,13 @@ p {
     justify-content: center;
     text-align: center;
 }
+section#hero::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #00000087;
+}
 .hero h5 {
     color: #fff;
     font-size: 28rem;
@@ -67,7 +74,7 @@ p {
 }
 .sub-headline {
     font-size: 5.5rem;
-    margin-bottom: 25px;
+    margin-bottom: 35px;
     font-family: var(--secondary-font);
     color: var(--secondary-font-color);
     font-weight: 100;
@@ -76,6 +83,11 @@ p {
     opacity: 0;
     animation: fadeUp .5s forwards;
     animation-delay: .5s;
+}
+.sub-headline .first {
+    background: #fff;
+    padding: 5px 20px;
+    border-radius: 5px;
 }
 .first-letter {
     text-transform: uppercase;
@@ -102,7 +114,7 @@ p {
     width: 100%;
     min-width: 1.9rem;
     height: .30rem;
-    background-color: #111;
+    background-color: #fff;
     position: relative;
     opacity: 0;
     animation: grow 2s forwards;
@@ -120,11 +132,11 @@ p {
     animation-delay: 1.2s;
 }
 .line-right::before {
-    border-right-color: #111;
+    border-right-color: #fff;
     right: 0;
 }
 .line-left::before {
-    border-left-color: #111;
+    border-left-color: #fff;
     left: 0;
 }
 .asterisk {
