--- a/header.css
+++ b/header.css
@@ -6,6 +6,7 @@
 }
 header {
     max-height: 60px;
+    height: 100%;
     background: rgba(0, 0, 0, 0.5);
     position: fixed;
     top: 0;
@@ -16,7 +17,7 @@ header {
     justify-content: space-between;
     align-items: center;
     transition: 0.5s;
-    z-index: 10;
+    z-index: 1000;
 }
 header.sticky {
     z-index: 100000;
