--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ p {
 section#hero::before {
     content: '';
     position: absolute;
+    max-height: 100%;
     width: 100%;
     height: 100%;
     background: #00000087;
