--- a/header.css
+++ b/header.css
@@ -59,6 +59,9 @@ header .navigation  li a:hover {
 
 
 @media (max-width:900px) {
+    header {
+        background: none;
+    }
     header,
     header.sticky {
         padding: 15px 40px;
@@ -109,6 +112,9 @@ header .navigation  li a:hover {
 
 }
 @media (max-width:480px){
+    header {
+        background: none;
+    }
     header,
     header.sticky {
         padding: 15px 10px;
