--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
     --secondary-font: 'Cabin', sans-serif;
     --body-font: 'Cabin',sans-serif;
     --main-font-color:#252525;
-    --secondary-font-color: #4187f6;
+    --secondary-font-color: #0f6116;
     --body-font-color:#515151;
 }
 html {
@@ -182,6 +182,16 @@ section#hero::before {
     background-color: var(--secondary-font-color);
 }
 /* discover */
+#about {
+    background: #dddddd;
+}
+#community {
+    background: #dddddd;
+}
+#operations {
+    background: #dddddd;
+}
+
 
 .global-headline {
     text-align: center;
@@ -276,7 +286,9 @@ section#hero::before {
     padding-top: 3rem;
     margin-bottom: 0;
 }
+
 /* perfect */
+
 .perfect-blend {
     min-height: 70vh;
     background-color: #232c33;
@@ -284,6 +296,7 @@ section#hero::before {
    align-items: center;
    bottom: 50px;
 }
+
 .body {
     display: flex;
     justify-content: center;
@@ -323,6 +336,8 @@ section#hero::before {
     object-fit: cover;
 }
 
+
+
 /* footer */
 footer {
     padding: 7.9rem 5px;
@@ -355,12 +370,16 @@ footer {
     overflow: hidden;
 }
 .footer-content h4 {
-    color: var(--secondary-font-color);
+    color: #fff;
     font-size: 1.5rem;
     text-transform: uppercase;
     font-weight: 100;
     letter-spacing: 3px;
     margin-bottom: 3rem;
+   
+}
+.footer-content h4 span {
+    border-bottom: 3px solid var(--secondary-font-color);
 }
 .footer-content .asterisk {
     margin: 2.4rem 0;
@@ -378,8 +397,8 @@ footer {
     align-items: center;
 }
 .social-media h4 {
-    color: var(--secondary-font-color);
-    border-bottom: 2px solid #fff;
+    color: #fff;
+    border-bottom: 2px solid var(--secondary-font-color);
     max-width: 200px;
 }
 .social-icons {
@@ -410,8 +429,8 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: var(--secondary-font-color);
-    border-bottom: 2px solid #fff;
+    color: #fff;
+    border-bottom: 2px solid var(--secondary-font-color);
     max-width: 140px;
 }
 form  input {
@@ -499,7 +518,11 @@ button .fas {
     }
     .rest-info {
         display: flex;
+        justify-content: space-between;
         align-items: center;
+    }
+    .rest-info .animate-right {
+        padding-left: 100px;
     }
     .rest-info > div {
         flex: 1;
